------------------------------------------------------------------------------
CHANGELOG
------------------------------------------------------------------------------
2006-12-09  Andreas Røsdal  <andrearo@pvv.ntnu.no>
	* Fix Bug #381580 – glchess doesn't respect the menu layout selected.

2006-12-07  Robert Ancell  <bob27@users.sourceforge.net>
	* Added Fruit and Amundsen engines to autodetect list.
	* Tell UCI engines they have 5 mins to play to cause them to take time
	  choosing moves.
	* Dynamically generate about dialog.
	* Fix bug loading UCI games.
	* Catch exceptions when reading from chess engines.
	* Ignore escaped PGN data - this allows the loading of games from the
	  Knights chess interface.

2006-12-01  Robert Ancell  <bob27@users.sourceforge.net>
	* Added configuration module that uses GConf when available

2006-11-27  Robert Ancell  <bob27@users.sourceforge.net>
	* Applied HIG patch from (Gnome bug #379294).
	* Disable "Save As" menu item when no game selected.
	* Send 'ucinewgame' and 'position startpos' to UCI chess engines

2006-11-22  Robert Ancell  <bob27@users.sourceforge.net>
        * Support loading of multiple games from the command line.
        * Don't autosave games that were loaded from/save to a file.
        * Ask user which loaded/saved games to save on quit.
	* Added "Save As" menu option.

2006-11-18  Andreas Røsdal  <andrearo@pvv.ntnu.no>

	* about.glade.in:
	* data/glchess.svg: New Tango styled icon for glChess by 
	Hylke Bons <h.bons@student.rug.nl>.

2006-11-06  Robert Ancell  <bob27@users.sourceforge.net>
	* Ported fixes from glChess 1.0RC2:
	* src/lib/scene/opengl/opengl.py: Fix bug selecting outside board
	* src/lib/scene/opengl/png.py: Fix to make CRC checking work on 64
	  bit systems, handle corrupt PNG files.
 	* src/lib/scene/opengl/texture.py: Handle corrupt PNG files.
	* data/ai.xml: Added Diablo, HoiChess, BBChess to list of autodetected
	  engines.
	* glade/glchess.glade: Added fullscreen mode