@@ -1,1 +1,1 @@
-Makefile Makefile.in
+Makefile Makefile.in glchess
