@@ -2,6 +2,11 @@
 CHANGELOG
 ------------------------------------------------------------------------------
 2006-12-09  Andreas Røsdal  <andrearo@pvv.ntnu.no>
+
+	* Fix Bug #382057 – assumed paths in python files, by importing
+	pyexecdir into python path.
+
+2006-12-09  Andreas Røsdal  <andrearo@pvv.ntnu.no>
 	* Fix Bug #381580 – glchess doesn't respect the menu layout selected.
 
 2006-12-07  Robert Ancell  <bob27@users.sourceforge.net>
